<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDI-MRDD</string>
    <string name="well_page_name">Well Lists</string>
    <string name="add_curve_page_name">Add Curve</string>
    <string name="btn_revoke_access">Revoke</string>
    <string name="btn_webview">Webview</string>
    <string name="add_curve_action">Add Curve to Dashboard</string>
    <string name="search_hint">Search Wells</string>
    <string name="add_curve_action_search">Search Add Wells Page</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for Login Page -->
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_logout_from_google">SDI Sign In</string>
    <string name="btn_cancel_login">Cancel</string>

    <!--Strings for Well Dashboard Fragment-->
    <string name="refresh_dashboard_action">Refresh Dashboard</string>
    <string name="context_delete">Delete</string>

    <!-- Strings for Add Curve Menu -->
    <string name="add_curve_search_hint">Search curves</string>
    <string name="add_curve_search_label">Curve Search</string>

    <!-- Strings for Add Curve Page -->
    <string name="confirm_curve_add_title">Confirm Add</string>
    <string name="btn_add_curves">Add Curve(s)</string>
    <string name="confirm_curve_msg">Are you sure you want to add the curve(s)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="random">Random</string>
    <string name="title_activity_well_list">WellListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_well_dash_board">WellDashBoardActivity</string>
    <string name="title_activity_add_curve">AddCurveActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="vsTime">Vs. Time</string>
    <string name="vsDepth">Vs. Depth</string>

    <!-- Strings for Create Plot Page -->
    <string name="btn_create_plot">Create Plot</string>
    <string name="plot_name_prompt">Plot Name: </string>
    <string name="create_plot_page_name">Create New Plot</string>
    <string name="title_activity_view_plot">ViewPlotActivity</string>
    <string name="time">Time </string>
    <string name="depth">Depth </string>
    <string name="ivChoice">Independent Variable: </string>
</resources>
