<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/sdi_white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/plot_name_prompt"
            android:id="@+id/plot_name_prompt" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content"
            android:id="@+id/plot_name_entry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:id="@+id/create_plot_view"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@xml/top_border_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/text"
                android:text="@string/ivChoice"/>

            <Spinner
                android:id="@+id/iv_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/ivChoice"
                android:spinnerMode="dropdown"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:layout_gravity="top"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_create_plot"
                android:id="@+id/btn_create_plot"
                android:layout_gravity="center_horizontal"
                android:background="@color/sdi_black"
                android:textColor="@color/sdi_white"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>